fixed social links layout issue in mobile

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -299,7 +299,7 @@ p
           float: none
           padding-right: 0
           margin: 20px auto 0
-          width: 46%
+          width: 51%
           div:first-child
             margin-left: 0
 
